--- a/modules/advisorhomepages/client/css/ta-candidates.css
+++ b/modules/advisorhomepages/client/css/ta-candidates.css
@@ -43,6 +43,36 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
     background-repeat: repeat-x;
 }
+
+.panel > .customPanel{
+    background-image: -webkit-linear-gradient(top, #f47741 0%, #f4a641 100%);
+    background-image:      -o-linear-gradient(top, #f47741 0%, #f4a641 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f47741), to(#f4a641));
+    background-image:         linear-gradient(to bottom, #f47741 0%, #f4a641 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
+    background-repeat: repeat-x;
+}
+
+.customOrange{
+  background-color: orange;
+  background: -webkit-linear-gradient(#f47741, #f4a641); /* For Safari 5.1 to 6.0 */
+   background: -o-linear-gradient(#f47741, #f4a641); /* For Opera 11.1 to 12.0 */
+   background: -moz-linear-gradient(#f47741, #f4a641); /* For Firefox 3.6 to 15 */
+   background: linear-gradient(#f47741, #f4a641); /* Standard syntax (must be last) */
+}
+
+.customBlue{
+  background: white;
+  background-color: blue;
+  background: -webkit-linear-gradient(#2d37a8, #3b43a0); /* For Safari 5.1 to 6.0 */
+   background: -o-linear-gradient(#2d37a8, #3b43a0); /* For Opera 11.1 to 12.0 */
+   background: -moz-linear-gradient(#2d37a8, #3b43a0); /* For Firefox 3.6 to 15 */
+   background: linear-gradient(#2d37a8, #3b43a0); /* Standard syntax (must be last) */
+
+}
+
+
+
 /*.panel-heading{*/
     /*background-image: -webkit-linear-gradient(top, #ea0423 0%, #d1364b 100%);*/
     /*background-image:      -o-linear-gradient(top, #ea0423 0%, #d1364b 100%);*/
@@ -51,4 +81,3 @@
     /*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);*/
     /*background-repeat: repeat-x;*/
 /*}*/
-
