--- a/modules/ta-coordinators/client/views/courselist-ta-coordinator.client.view.html
+++ b/modules/ta-coordinators/client/views/courselist-ta-coordinator.client.view.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="form-group">
-                  <input type="submit" class="btn-ta">
+                  <input type="submit" class="btn customOrange">
                 </div>
                </fieldset>
             </form>
